add skeleton of issueDate

--- a/vocabulary.html
+++ b/vocabulary.html
@@ -410,6 +410,29 @@
           </pre>
         </section>
 
+        <section id="issueDate" about="https://w3id.org/credentials/#claim" typeof="rdfs:Property">
+          <h3><span property="rdfs:label">issueDate</span></h3>
+          <p property="rdfs:comment">
+            issuedDate is a DateTime
+          </p>
+
+          <dl>
+            <dt>Status</dt>
+            <dd property="vs:term_status">unstable</dd>
+            <dt>Attribute of</dt>
+            <dd>
+              <a property="rdfs:domain" href="http://schema.org/Intangible">Intangible</a>
+            </dd>
+            <dt>Typically used by</dt>
+            <dd>
+              <a href="#Credential">Credential</a>
+            </dd>
+            <dt>Associated value must be an</dt>
+            <dd>
+              DateTime string
+            </dd>
+          </dl>
+        </section>
 
   </section>
 
